@@ -3,6 +3,13 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/08/04
+	* Removed weird mvp reward item drop behavior (see topic:160077)
+	* Fixed Cart Revolution not transferring status effects on attack,
+	  and Cart Termination doing it when it shouldn't (see topic:156745)
+	* Fixed #refine not accepting names with spaces in them
+	* Fixed disguises not doing sit-down properly (missing self packet)
+	  broken since r6299 stable / r5833 trunk [ultramage]
 2007/07/30
 	* Updated sql files [Playtester]
 	* Corrected pet taming code; items are consumed immediately and only 1x
