@@ -117,114 +117,6 @@
 1921,Easter Bunny@NPC_SUMMONSLAVE,attack,196,5,10000,3000,10000,no,self,slavele,2,1063,,,,,
 1921,Easter Bunny@NPC_SUMMONSLAVE,idle,196,5,5000,2000,40000,no,self,always,2,1920,,,,,
 
-// eAthena's Custom Equipped Mobs
-1970,Poring@NPC_EMOTION,loot,197,1,2000,0,5000,yes,self,always,0,2,,,,,
-1970,Poring@NPC_WATERATTACK,attack,184,1,2000,0,5000,yes,target,always,0,,,,,,
-1971,ChonChon@NPC_WINDATTACK,attack,187,1,2000,0,5000,yes,target,always,0,,,,,,
-1972,Spore@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,1,,,,,
-1972,Spore@NPC_PROVOCATION,chase,194,1,20,0,5000,yes,target,always,0,,,,,,19
-1972,Spore@NPC_SLEEPATTACK,attack,182,1,500,0,5000,yes,target,always,0,,,,,,
-1972,Spore@NPC_WATERATTACK,attack,184,1,2000,0,5000,yes,target,always,0,,,,,,
-1973,PecoPeco@AS_SONICBLOW,attack,136,5,500,800,5000,no,target,always,0,,,,,,6
-1973,PecoPeco@NPC_EMOTION,chase,197,1,200,0,5000,yes,self,always,0,6,,,,,
-1973,PecoPeco@NPC_FIREATTACK,attack,186,1,2000,0,5000,yes,target,always,0,,,,,,
-1973,PecoPeco@NPC_PROVOCATION,chase,194,1,20,0,5000,yes,target,always,0,,,,,,19
-1974,Orc Warrior@NPC_EMOTION,chase,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1974,Orc Warrior@NPC_EMOTION,chase,197,1,200,0,5000,yes,self,always,0,,,,,,
-1974,Orc Warrior@NPC_EMOTION,follow,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1974,Orc Warrior@NPC_EMOTION,follow,197,1,200,0,5000,yes,self,always,0,27,,,,,
-1974,Orc Warrior@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,32,2181,,,,
-1974,Orc Warrior@NPC_GROUNDATTACK,angry,185,2,500,500,5000,no,target,always,0,,,,,,6
-1974,Orc Warrior@NPC_GROUNDATTACK,attack,185,2,500,500,5000,no,target,always,0,,,,,,6
-1974,Orc Warrior@NPC_SMOKING,idle,195,1,50,0,36000000,yes,self,always,0,,,,,,9
-1975,Munak@NPC_EMOTION,chase,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1975,Munak@NPC_EMOTION,follow,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1975,Munak@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,1,2181,,,,
-1975,Munak@NPC_STUNATTACK,angry,179,2,500,1500,5000,no,target,always,0,,,,,,6
-1975,Munak@NPC_STUNATTACK,attack,179,2,500,1500,5000,no,target,always,0,,,,,,6
-1976,Isis@NPC_CRITICALSLASH,attack,170,1,500,500,5000,no,target,always,0,,,,,,6
-1976,Isis@NPC_DARKNESSATTACK,attack,190,1,2000,0,5000,yes,target,always,0,,,,,,
-1976,Isis@NPC_EMOTION,chase,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1976,Isis@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,6,149,,,,
-1977,Poporing@NPC_EMOTION,loot,197,1,2000,0,5000,yes,self,always,0,2,,,,,
-1977,Poporing@NPC_POISON,attack,176,2,500,800,5000,no,target,always,0,,,,,,
-1977,Poporing@NPC_POISONATTACK,attack,188,1,2000,0,5000,yes,target,always,0,,,,,,
-1978,Hunter Fly@AL_TELEPORT,idle,26,1,50,0,5000,yes,self,always,0,,,,,,
-1978,Hunter Fly@NPC_BLOODDRAIN,angry,199,1,500,0,5000,yes,target,always,0,,,,,,2
-1978,Hunter Fly@NPC_BLOODDRAIN,attack,199,1,500,0,5000,yes,target,always,0,,,,,,2
-1978,Hunter Fly@NPC_COMBOATTACK,angry,171,1,500,700,5000,no,target,always,0,,,,,,6
-1978,Hunter Fly@NPC_COMBOATTACK,attack,171,1,500,700,5000,no,target,always,0,,,,,,6
-1978,Hunter Fly@NPC_EMOTION,chase,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1978,Hunter Fly@NPC_EMOTION,follow,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1978,Hunter Fly@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,9,2181,,,,
-1978,Hunter Fly@NPC_WINDATTACK,angry,187,1,2000,0,5000,yes,target,always,0,,,,,,
-1978,Hunter Fly@NPC_WINDATTACK,attack,187,1,2000,0,5000,yes,target,always,0,,,,,,
-1979,Steel ChonChon@NPC_SILENCEATTACK,attack,178,2,500,700,5000,no,target,always,0,,,,,,
-1979,Steel ChonChon@NPC_WINDATTACK,attack,187,1,2000,0,5000,yes,target,always,0,,,,,,
-1980,Picky@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,2,,,,,
-1980,Picky@NPC_FIREATTACK,attack,186,1,2000,0,5000,yes,target,always,0,,,,,,
-1981,Rocker@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,2,,,,,
-1981,Rocker@NPC_GROUNDATTACK,attack,185,1,2000,0,5000,yes,target,always,0,,,,,,
-1982,Smokie@AL_HEAL,idle,28,5,10000,0,5000,yes,self,mystatuson,hiding,,,,,,2
-1982,Smokie@NPC_EMOTION,loot,197,1,2000,0,5000,yes,self,always,0,2,,,,,
-1982,Smokie@NPC_GROUNDATTACK,attack,185,2,500,500,5000,no,target,always,0,,,,,,6
-1982,Smokie@NPC_PROVOCATION,chase,194,1,20,0,5000,yes,target,always,0,,,,,,19
-1982,Smokie@TF_HIDING,attack,51,1,500,500,5000,no,self,myhpltmaxrate,50,,,,,,19
-1983,Yoyo@AM_POTIONPITCHER,idle,231,1,50,1500,5000,yes,self,always,0,,,,,,
-1983,Yoyo@NPC_EMOTION,loot,197,1,2000,0,5000,yes,self,always,0,2,,,,,
-1983,Yoyo@NPC_GROUNDATTACK,attack,185,1,2000,0,5000,yes,target,always,0,,,,,,
-1983,Yoyo@NPC_PROVOCATION,chase,194,1,20,0,5000,yes,target,always,0,,,,,,19
-1983,Yoyo@SM_PROVOKE,chase,6,10,50,600,5000,yes,target,always,0,,,,,,
-1983,Yoyo@TF_THROWSTONE,chase,152,1,200,0,5000,yes,target,always,0,,,,,,6
-1984,Lunatic@AL_HEAL,idle,28,1,10,2000,60000,yes,self,always,0,,,,,,
-1984,Lunatic@NPC_PROVOCATION,idle,194,1,2,0,0,yes,self,always,0,,,,,,
-1985,Poison Spore@NPC_EMOTION,chase,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1985,Poison Spore@NPC_EMOTION,follow,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1985,Poison Spore@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,1,2181,,,,
-1985,Poison Spore@NPC_POISON,angry,176,3,500,800,5000,no,target,always,0,,,,,,6
-1985,Poison Spore@NPC_POISON,attack,176,3,500,800,5000,no,target,always,0,,,,,,6
-1985,Poison Spore@NPC_POISONATTACK,angry,188,1,2000,0,5000,yes,target,always,0,,,,,,
-1985,Poison Spore@NPC_POISONATTACK,attack,188,1,2000,0,5000,yes,target,always,0,,,,,,
-1986,Baphomet Jr.@AL_TELEPORT,idle,26,1,10000,0,0,yes,self,rudeattacked,,,,,,,
-1986,Baphomet Jr.@NPC_CURSEATTACK,attack,181,3,500,800,5000,no,target,always,0,,,,,,29
-1986,Baphomet Jr.@NPC_DARKNESSATTACK,attack,190,2,500,500,5000,no,target,always,0,,,,,,6
-1986,Baphomet Jr.@NPC_EMOTION,chase,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1986,Baphomet Jr.@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,6,1173,,,,
-1986,Baphomet Jr.@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,2,,,,,
-1986,Baphomet Jr.@NPC_HALLUCINATION,attack,207,1,500,500,5000,yes,target,always,0,,,,,,29
-1986,Baphomet Jr.@NPC_HALLUCINATION,chase,207,1,50,500,5000,yes,target,always,0,,,,,,29
-1986,Baphomet Jr.@SA_DISPELL,attack,289,1,0,0,30000,yes,target,always,0,,,,,,29
-1987,Baby Desert Wolf@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,2,,,,,
-1987,Baby Desert Wolf@NPC_FIREATTACK,attack,186,1,2000,0,5000,yes,target,always,0,,,,,,
-1988,Deviruchi@AL_TELEPORT,idle,26,1,10000,0,0,yes,self,rudeattacked,,,,,,,
-1988,Deviruchi@NPC_CURSEATTACK,attack,181,3,500,800,5000,no,target,always,0,,,,,,29
-1988,Deviruchi@NPC_DARKNESSATTACK,attack,190,1,2000,0,5000,yes,target,always,0,,,,,,
-1988,Deviruchi@NPC_DARKTHUNDER,attack,341,3,500,1500,5000,yes,target,always,0,,,,,,29
-1988,Deviruchi@NPC_DARKTHUNDER,chase,341,3,50,1500,5000,yes,target,always,0,,,,,,29
-1988,Deviruchi@NPC_ENERGYDRAIN,attack,200,1,500,0,5000,yes,target,myhpltmaxrate,30,,,,,,19
-1988,Deviruchi@NPC_ENERGYDRAIN,chase,200,1,50,0,5000,yes,target,myhpltmaxrate,30,,,,,,19
-1989,Dokebi@BS_ADRENALINE,attack,111,1,500,1500,5000,no,self,always,0,,,,,,
-1989,Dokebi@BS_ADRENALINE,chase,111,1,50,1500,5000,no,self,always,0,,,,,,6
-1989,Dokebi@MC_MAMMONITE,attack,42,5,500,800,5000,no,target,always,0,,,,,,8
-1989,Dokebi@NPC_DARKNESSATTACK,attack,190,1,2000,0,5000,yes,target,always,0,,,,,,
-1989,Dokebi@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,2,,,,,
-1990,Drops@NPC_EMOTION,loot,197,1,2000,0,5000,yes,self,always,0,2,,,,,
-1990,Drops@NPC_FIREATTACK,attack,186,1,2000,0,5000,yes,target,always,0,,,,,,
-1991,Petit@NPC_EMOTION,chase,197,1,20,0,5000,yes,self,always,0,19,129,,,,
-1991,Petit@NPC_EMOTION,idle,197,1,200,0,5000,yes,self,always,0,7,149,,,,
-1991,Petit@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,2,,,,,
-1991,Petit@NPC_GROUNDATTACK,attack,185,3,500,500,5000,no,target,always,0,,,,,,6
-1991,Petit@NPC_TELEKINESISATTACK,chase,191,5,50,0,5000,yes,target,always,0,,,,,,
-1992,Savage Babe@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,19,,,,,
-1992,Savage Babe@NPC_GROUNDATTACK,attack,185,1,2000,0,5000,yes,target,always,0,,,,,,
-1993,Sohee@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,28,,,,,
-1993,Sohee@NPC_STOP,attack,342,1,500,0,30000,yes,target,always,0,,,,,,9
-1993,Sohee@NPC_SUICIDE,attack,175,1,500,0,5000,yes,target,myhpltmaxrate,80,,,,,,
-1993,Sohee@NPC_WATERATTACK,attack,184,3,500,500,5000,no,target,always,0,,,,,,6
-1994,Bon Gun@KN_SPEARSTAB,attack,58,5,500,800,5000,no,target,always,0,,,,,,
-1994,Bon Gun@NPC_STUNATTACK,attack,179,3,500,1500,5000,no,target,always,0,,,,,,0
-
-
 //Custom Fire Poring. Warning, Colides with META_DENIRO
 //1239,Fire Poring@AL_HEAL,idle,28,10,10000,0,2000,yes,self,always,0,,,,,,4
 //1239,Fire Poring@AL_HEAL,walk,28,10,10000,0,2000,yes,self,always,0,,,,,,4
