@@ -705,8 +705,8 @@ packet_ver: 16
 
 //2005-06-08aSakexe
 0x0216,6
-0x0217,2
-0x022f,5 
+0x0217,2,blacksmith,0
+0x022f,5
 0x0231,26,changehomunculusname,0
 0x023a,4
 0x023b,24,storagepassword,0
